--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -8,15 +8,28 @@
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li class="{{ message.tags }}">
+        {{ message|safe }}
+        <a href="#" class="close">✖</a>
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
 <ul class="nav justify-content-center">
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Articles</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'show-authors' %}">Authors</a>
+        <a class="nav-link" href="#">Authors</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="{% url 'login' %}">login</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
     </li>
     <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
