Update index view

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,6 +1,8 @@
 {% extends 'main/base.html' %}
 {% load static %}
-
+{% block title %}
+{{ title }}
+{% endblock %}
 {% block content %}
 {% for post in latest_posts %}
 <div class="card border border-primary" style="width: 25rem;">
